--- a/src/main/resources/com/wolery/fx/dock/default.css
+++ b/src/main/resources/com/wolery/fx/dock/default.css
@@ -21,9 +21,9 @@
   -fx-fill:               -fx-selection-bar;
   -fx-opacity:            0.5;
   -fx-stroke:             rgba(50,50,100,0.4);
-  -fx-stroke-width:       6;
+  -fx-stroke-width:       3;
   -fx-stroke-type:        inside;
-  -fx-stroke-dash-array:  8 4;
+  -fx-stroke-dash-array:  6 4;
   -fx-stroke-line-cap:    butt;
 }
 
@@ -33,7 +33,7 @@
   -fx-hgap:               30;
   -fx-vgap:               30;
   -fx-shape:              "M0,10 a10,10 0 1,0 20,0 a10,10 0 1,0 -20,0";
-  -fx-background-color:   rgba(50, 50, 100, 0.4);
+  -fx-background-color:   rgba(50,50,100,0.4);
   -fx-border-width:       50;
   -fx-border-color:       rgba(50,50,100,0.2);
 }
